Finish main page

--- a/brendavaldes-portafolio/src/app/globals.css
+++ b/brendavaldes-portafolio/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 @theme {
   --font-title: "Balsamiq Sans", sans-serif;
   --color-title: #4a3b32;
-  --color-purple-complement: #E3D3FB
+  --color-purple-complement: #e3d3fb;
 }
 
 body {
